# todo-cli

./: .gitignore  LICENSE  README.md  Roadmap.md  pyproject.toml
.github/workflows/: test.yaml
docs/: cli_explanation.md  commands_plan.md  core_explanation.md  docs.json  index.mdx  introduction.mdx
docs/dev/: cli_explanation.mdx  commands_plan.mdx  core_explanation.mdx  development.mdx
docs/get-started/: commands.mdx  installation.mdx  introduction.mdx
examples/: todo_data.example.json
src/todo_cli/: __init__.py  core.py  main.py  utils.py
tests/: test_core.py  test_utils.py
