[project]
name = "todo-cli-x"
version = "0.1.5"
description = "A simple command-line todo application"
authors = [{ name = "vidjinnangni", email = "gregory.thoto@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5"
]

[project.scripts]
todo = "todo_cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
