[project]
name = "todo-cli-x"
version = "1.0.2"
description = "A simple command-line todo application"
authors = [{ name = "vidjinnangni", email = "gregory.thoto@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://pypi.org/project/todo-cli-x/"
Documentation = "https://todocli.vmslab.work/"
Repository = "https://github.com/vidjinnangni/todo-cli-x"
Roadmap = "https://vidjinnangni.notion.site/Todo-CLI-Roadmap-207873f9fe5a80f38256eb0b0798e30a"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5"
]

[project.scripts]
todo = "todo_cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
